--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,10 @@
 		"editor.formatOnSave": true
 	},
 	"[typescriptreact]": {
-		"editor.defaultFormatter": "vscode.typescript-language-features",
+		"editor.defaultFormatter": "dbaeumer.vscode-eslint",
 		"editor.formatOnSave": true
 	},
-	"eslint.run": "onType",
+	"eslint.run": "onSave",
 	"eslint.format.enable": true,
 	"typescript.tsdk": "node_modules/typescript/lib"
 }
