--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@rbxts/react": "^0.3.3",
     "@rbxts/react-reflex": "^0.3.4",
     "@rbxts/react-roblox": "^0.3.3",
+    "@rbxts/pretty-react-hooks":"^0.6.0",
     "@rbxts/reflex": "^4.3.1",
     "@rbxts/services": "^1.5.4",
     "@rbxts/signal": "^1.1.1",
