--- a/aftman.toml
+++ b/aftman.toml
@@ -4,4 +4,5 @@
 # To add a new tool, add an entry to this table.
 [tools]
 rojo = "rojo-rbx/rojo@7.2.1"
-# rojo = "rojo-rbx/rojo@6.2.0"
+rbxcloud = "Sleitnick/rbxcloud@0.14.0"
+lune = "lune-org/lune@0.8.9"
